--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "@repo/ui": "workspace:*",
     "next": "^14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loadnpipe": "workspace:*"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.2",
